# xmonad-config

./: LICENSE  update-config  xmonad-config.cabal  xmonad.hs
