cabal-version: >=1.10
name: xmonad-config
version: 0.1.0.0
license: BSD3
license-file: LICENSE
maintainer: daniel.trstenjak@gmail.com
author: Daniel Trstenjak
synopsis: My xmonad configuration
build-type: Simple
extra-source-files:
    CHANGELOG.md

executable xmonad-config
    main-is: xmonad.hs
    default-language: Haskell2010
    build-depends:
        base ==4.12.*,
        directory >=1.3.3.0 && <1.4,
        xmonad ==0.15.*,
        xmonad-contrib ==0.15.*,
        xmonad-extras >=0.15.1 && <0.16
